2015-10-21   Mark Hatle <mark.hatle@windriver.com>
	* rtld/: Resync to glibc-2.22
	* rtld/*: Update copyright dates to match glibc-2.22
	* rtld/rtld.c: Update the elf_machine_type class entries
		Add support for ELF_RTYPE_CLASS_EXTERN_PROTECTED_DATA via
		new extern_protected_data function.
		rename reloc_typeclass to elf_machine_type_class
		add machine_no_rela, machine_no_rel funcs
	* rtld/dl-tls.c: (rtld_determine_tlsoffsets) add NIOS2 definition
	* rtld/dl-lookup.c
	* rtld/dl-lookupX.h: Add EXTERN_PROTECTED_DATA support

	* glibc changes directly affecting the implementation:

		2013-12-04  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>
		            Alan Modra  <amodra@gmail.com>
		* libc/sysdeps/powerpc/powerpc64/dl-machine.h
		(elf_machine_type_class): Use SHN_UNDEF PLT handling for ELFv2 ABI.

		2015-01-18  Chung-Lin Tang  <cltang@codesourcery.com>
		            Sandra Loosemore  <sandra@codesourcery.com>
		            Andrew Jenner  <andrew@codesourcery.com>
		            Joseph Myers  <joseph@codesourcery.com>
		            Nathan Sidwell  <nathan@codesourcery.com>
		* sysdeps/nios2/dl-machine.h: New file.

		2015-03-31  H.J. Lu  <hongjiu.lu@intel.com>
		* elf/dl-lookup.c (do_lookup_x): When UNDEF_MAP is NULL, which
		indicates it is called from do_lookup_x on relocation against
		protected data, skip the data definion in the executable from
		copy reloc.
		(_dl_lookup_symbol_x): Pass ELF_RTYPE_CLASS_EXTERN_PROTECTED_DATA,
		instead of ELF_RTYPE_CLASS_PLT, to do_lookup_x for
		EXTERN_PROTECTED_DATA relocation against STT_OBJECT symbol.
		* sysdeps/i386/dl-machine.h (elf_machine_type_class): Set class
		to ELF_RTYPE_CLASS_EXTERN_PROTECTED_DATA for R_386_GLOB_DAT.
		* sysdeps/x86_64/dl-machine.h (elf_machine_type_class): Set class
		to ELF_RTYPE_CLASS_EXTERN_PROTECTED_DATA for R_X86_64_GLOB_DAT.

		2015-07-24  Szabolcs Nagy  <szabolcs.nagy@arm.com>
		* sysdeps/aarch64/dl-machine.h (elf_machine_type_class): Handle
		ELF_RTYPE_CLASS_EXTERN_PROTECTED_DATA.